# vibestran

./: .gitignore  CLAUDE.md  README.md  meson.build  meson_options.txt
example_cases/: simply_supported_beam.bdf  thermal_constrained.bdf
include/core/: coord_sys.hpp  dof_map.hpp  exceptions.hpp  model.hpp  mpc_handler.hpp  sparse_matrix.hpp  types.hpp
include/elements/: cquad4.hpp  ctria3.hpp  element_base.hpp  element_factory.hpp  line_elements.hpp  rbe_constraints.hpp  solid_elements.hpp
include/io/: bdf_parser.hpp  inp_parser.hpp  op2_writer.hpp  results.hpp
include/solver/: cuda_eigensolver_backend.hpp  cuda_pcg_solver_backend.hpp  cuda_solver_backend.hpp  linear_static.hpp  solver_backend.hpp  vulkan_buffer.hpp  vulkan_context.hpp  vulkan_solver_backend.hpp
shaders/: axpby.comp  axpby_d.comp  dot_reduce.comp  dot_reduce_d.comp  jacobi_precond.comp  jacobi_precond_d.comp  spmv.comp  spmv_d.comp
src/: main.cpp
src/core/: coord_sys.cpp  dof_map.cpp  model.cpp  mpc_handler.cpp  quality_checks.cpp  sparse_matrix.cpp
src/elements/: cquad4.cpp  ctria3.cpp  element_factory.cpp  line_elements.cpp  rbe_constraints.cpp  solid_elements.cpp
src/io/: bdf_parser.cpp  csv_writer.cpp  inp_parser.cpp  op2_writer.cpp  results.cpp
src/solver/: assembly_parallel.hpp  cuda_eigensolver_backend.cu  cuda_pcg_solver_backend.cu  cuda_solver_backend.cu  linear_static.cpp  linear_static_pressure.cpp  modal.cpp  solver_backend.cpp  vulkan_buffer.cpp  vulkan_context.cpp  vulkan_pcg_full.cpp  vulkan_pcg_internal.hpp  vulkan_pcg_tiled.cpp  vulkan_pipelines.cpp  vulkan_pipelines.hpp  vulkan_solver_backend.cpp
subprojects/: eigen3.wrap  gtest.wrap
tests/e2e/cases/: cquad4_mixed_normals_cantilever.bdf  cquad4_mixed_normals_cantilever.expected.json  cquad4_ring_60deg_slice.bdf  cquad4_ring_60deg_slice.expected.json  cquad4_ring_6fold_full.bdf  cquad4_ring_6fold_full.expected.json
tests/integration/: test_integration.cpp
tests/unit/: test_bdf_parser.cpp  test_coord_sys.cpp  test_cuda_solver.cpp  test_dof_map.cpp  test_elements.cpp  test_inp_parser.cpp  test_mpc_handler.cpp  test_output_writers.cpp  test_pcg_solver.cpp  test_sparse_matrix.cpp  test_types.cpp  test_vulkan_solver.cpp
tools/: bin2h.py  generate_chexa_mesh.py  generate_cquad4_tube.py  generate_test_cases.py  mitc4_plate_benchmark.py  mitc4_postprocess.py
